[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[lib]
name = "aoc"

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
itertools = "0.12"
num = "0.4"
pathfinding = "4.4"
